force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/SalesOrderAdditionalChargeCredit__c.object-meta.xml
<CustomObject>
    <description>Related object to Order for Order Charges and Credits.</description>
    <label>Order Additional Charge and Credit</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Order Additional Charge/Credit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Additional Charges and Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>