force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Additional_Charge_Credit__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Charge/Credit</label>
    <referenceTo>AdditionalChargeCredit__c</referenceTo>
    <relationshipName>Order_Additional_Charges_Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>