force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/ChargeCreditTaxRateID__c.field-meta.xml
<CustomField>
    <fullName>ChargeCreditTaxRateID__c</fullName>
    <label>Deprecated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>