force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/CustomerID2__c.field-meta.xml
<CustomField>
    <fullName>CustomerID2__c</fullName>
    <formula>SalesOrder__r.CustomerID2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerID2</label>
    <type>Text</type>
</CustomField>