force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/DepartmentID__c.field-meta.xml
<CustomField>
    <fullName>DepartmentID__c</fullName>
    <defaultValue>100</defaultValue>
    <label>DepartmentID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>