force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <formula>OR(ISPICKVAL(SalesOrder__r.Status_Picklist__c, &quot;Draft&quot;), ISPICKVAL(SalesOrder__r.Status_Picklist__c, &quot;Unreleased&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>