force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Intacct_Order__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Order__c</fullName>
    <formula>SalesOrder__r.Name &amp; &quot;-&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Order #</label>
    <type>Text</type>
</CustomField>