force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/IntacctState__c.field-meta.xml
<CustomField>
    <fullName>IntacctState__c</fullName>
    <formula>SalesOrder__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IntacctState</label>
    <type>Text</type>
</CustomField>