force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Line_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Effective_Date__c</fullName>
    <formula>IF( ISBLANK(Adjustment_Date__c  ), SalesOrder__r.Released__c ,  Adjustment_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Effective Date</label>
    <type>DateTime</type>
</CustomField>