force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <formula>Additional_Charge_Credit__r.Name &amp; &quot;;&quot; &amp; SalesOrder__r.ContactBuying__r.FirstName &amp; SalesOrder__r.ContactBuying__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Memo</label>
    <type>Text</type>
</CustomField>