force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <formula>round(( AdditionalChargeCreditAmount__c *  TaxSalesRate__c ) +
( AdditionalChargeCreditAmount__c *  TaxExciseRate__c ) +
( AdditionalChargeCreditAmount__c *  TaxUsageRate__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>