force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/TaxUsageRate__c.field-meta.xml
<CustomField>
    <fullName>TaxUsageRate__c</fullName>
    <label>Tax Usage Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>