force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/TaxVAT__c.field-meta.xml
<CustomField>
    <fullName>TaxVAT__c</fullName>
    <formula>IF(
  OR(
    TaxAmount__c &gt; 0,
    VATAmount__c &gt; 0
  ),
  &apos;Yes&apos;,
  &apos;No&apos;
)</formula>
    <label>Tax</label>
    <type>Text</type>
</CustomField>