force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <formula>SalesOrder__r.TransactionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TransactionType</label>
    <type>Text</type>
</CustomField>