force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <defaultValue>&quot;Each&quot;</defaultValue>
    <label>Unit Of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>