force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/Void_Date__c.field-meta.xml
<CustomField>
    <fullName>Void_Date__c</fullName>
    <label>Void Date</label>
    <type>DateTime</type>
</CustomField>