force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>WarehouseID__c</fullName>
    <formula>SalesOrder__r.WarehouseID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WarehouseID</label>
    <type>Text</type>
</CustomField>