force-app/main/default/objects/SalesOrderAdditionalChargeCredit__c/fields/WebOrderAdditionalChargeCredit__c.field-meta.xml
<CustomField>
    <fullName>WebOrderAdditionalChargeCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Order Additional Charge/Credit</label>
    <type>Checkbox</type>
</CustomField>